--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,13 @@
 4.0 - Elements 
 -------------------------------------------------------------- */
 
+/* -- FORMS -- */
+span{
+    display: none;
+}
+
+
+
 /* -- MEDIA -- */
 #map-responsive{
     overflow:hidden;
