--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@
 -------------------------------------------------------------- */
 
 /* -- FORMS -- */
-span{
+.social-media,.getintouch{
     display: none;
 }
 
@@ -54,12 +54,22 @@ span{
 
 /* -- MEDIA -- */
 
+ #map {
+        height: 100%;
+      }
 
-#map-responsive{
+ html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+/*#map-responsive{
     overflow:hidden;
     padding-bottom:56.25%;
     position:relative;
     height:0;
+    top: 0;
+    left: 0;
 }
 #map-responsive iframe{
     left:0;
@@ -67,7 +77,7 @@ span{
     height:80%;
     width:100%;
     position:absolute;
-}
+}*/
 
 /* -- TYPOGRAPHY -- */
 h2{
