--- a/css/main.css
+++ b/css/main.css
@@ -36,10 +36,9 @@
         - Size
 
 --------------------------------------------------------------*/
-*{
-    font-family: 'Muli', sans-serif;
-    font-size: 1rem;
-    color: #fff;
+* {
+  font: 1rem 'Muli', sans-serif;
+  color: #fff;
 }
 /*--------------------------------------------------------------
 4.0 - Elements 
@@ -57,26 +56,28 @@ form{
 
 /* -- MEDIA -- */
 
-
+#map-location{
+    position: relative;
+}
 
 
 /*medium display positioning that messes everything up*/
-/*@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
     #map-yellow{
     position: absolute;
     left: 20px;
-    top: 3170px;
+    top: 0px;
 }
     #map-yellow>section{
-        padding: 80px 40px;
+        padding: 8rem 4rem;
     }
 
-}*/ 
+}
 @media screen and (min-width: 1024px) {
     #map-yellow{
     position: absolute;
-    left: 130px;
-    bottom: -2240px;
+    left: 7rem;
+    bottom: 0rem;
 }
 
 }
@@ -89,13 +90,12 @@ h1{
     margin-top: 10rem;
     font-size: 1.2rem;
 }
-h2{
-    font-family: 'Playfair Display', serif;
-    border-bottom: .01em solid #fff;
-    padding: 1em 0;
-    font-size: 1.6rem;
-    letter-spacing: .09em;
 
+h2 {
+  font: 1.6rem 'Playfair Display', serif;
+  border-bottom: .01em solid #fff;
+  padding: 1em 0;
+  letter-spacing: .09em;
 }
 
 h3{
@@ -141,7 +141,7 @@ form:first-of-type [class="btn-yellow"]{
     }
 
 #map-yellow>section{
-     padding: 60px 50px;
+     padding: 3rem 2.7rem;
 }
 
 #map-location [class*="col-sm-12"]{
@@ -191,20 +191,20 @@ nav li, li {
                 header nav {
                     display: none;
                     float: none;
-                    padding-top: 10px; 
+                    padding-top: 1rem; 
 /* Hamburger icon is in the header on the right side, and nav expands vertically in the center of the screen below the hamburger icon, that's why I put the padding 120px, to make nav below the icon*/
                     text-align: left;
                 }
 
                 nav li {
                     float: left;
-                    margin-left: 25px;
+                    margin-left: 2rem;
                 }  
 
                 nav li a {
                     display: inline-block;
-                    margin-left: 0px;
-                    margin-top: 10px;
+                    margin-left: 0rem;
+                    margin-top: 1rem;
                 }
             }
 
